# backend-cpp

./: .gitignore  CMakeLists.txt  Dockerfile-Makefile  Dockerfile-full  Dockerfile-webserver  README.md  app.production.cfg  app.vagrant.cfg  build.sh
Flashpost-tests/: flashpost.db  flashpostCollections.db  flashpostCookies.db  flashpostHistory.db  flashpostUserPreference.db  flashpostVariable.db
include/: main.hpp  redis_subscriber.hpp  root_certificates.hpp  sravz.hpp  util.hpp  utils.hpp
include/controllers/: aws_s3_controller.hpp  base_controller.hpp  duckdb_controller.hpp  fundamentals_controller.hpp  mongo_controller.hpp
include/models/: base_model.hpp  duckdb_model.hpp  presigned_url_model.hpp
include/router/: router.hpp
include/services/: aws_s3_service.hpp  data_provider_service.hpp  duckdb_service.hpp  mongo_service.hpp  redis_service.hpp
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  main.cpp  redis_subscriber.cpp  redis_uploader.cpp  util.cpp  utils.cpp  ws_vendor.cpp
src/controllers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aws_s3_controller.cpp  duckdb_controller.cpp  fundamentals_controller.cpp  mongo_controller.cpp
src/router/: router.cpp
src/services/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aws_s3_service.cpp  data_provider_service.cpp  duckdb_service.cpp  mongo_service.cpp  redis_service.cpp
src/web/: http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  parser.cpp  parser.hpp  publisher.cpp  publisher.hpp  shared_state.cpp  shared_state.hpp  subscriber.cpp  subscriber.hpp  symbol.cpp  symbol.hpp  webserver.cpp  webserver.hpp  websocket_session.cpp  websocket_session.hpp
tests/: CMakeLists.txt  main_aws_s3.cpp  main_boost.cpp  main_duckdb.cpp  main_mongo_db.cpp  main_redis_async.cpp  main_router.cpp  main_threaded.cpp  main_ws.cpp  main_ws_async.cpp  main_ws_vendor.cpp
tests/integration_tests/: CMakeLists.txt
tests/integration_tests/controllers/: duckdb_controller_test.cpp  fundamentals_controller_test.cpp
tests/integration_tests/services/: aws_s3_service_test.cpp  data_provider_service_test.cpp  duckdb_service_test.cpp  redis_service_test.cpp
tests/unit_tests/: CMakeLists.txt  Makefile  main_test.cpp  presigned_url_model_test.cpp  utils_test.cpp
thunder-tests/_db-backup/: thunderclient.json
thunder-tests/collections/: tc_col_rest-api-test.json
thunder-tests/environments/: tc_env_test-vars.json  tc_env_testvars-staging.json  tc_env_testvars.json
